z-index fix authLayout and sign components

--- a/server/public/components/auth/SignIn/SignIn.scss
+++ b/server/public/components/auth/SignIn/SignIn.scss
@@ -7,6 +7,7 @@
   height: auto;
   margin: auto;
   padding: 32px;
+  z-index: 0;
 
   background-color: #fff;
   border-radius: var(--border-form-element-border-radius);
